--- a/NodeJS/App2/views/profile.ejs
+++ b/NodeJS/App2/views/profile.ejs
@@ -25,7 +25,8 @@
     </style>
   </head>
   <body>
-    <h1>Home</h1>
-    <p>Este es un texto sin sentido.</p>
+    <h1>Welcome to the profile of <%= person %> </h1>
+    <p><strong>Age: </strong><%= data.age %></p>
+    <p><strong>Job: </strong><%= data.job %></p>
   </body>
 </html>
