--- a/NodeJS/App2/views/index.ejs
+++ b/NodeJS/App2/views/index.ejs
@@ -17,28 +17,16 @@
           letter-spacing: 2px;
           text-align: center;
       }
-      h2{
-        font-size: 30px;
-        text-transformation: uppercase;
-        letter-spacing: 2px;
-        text-align: center;
-      }
-      p, li{
+
+      p{
           font-size:16px;
           text-align: center;
       }
     </style>
   </head>
   <body>
-    <% include partials/nav.ejs %>
-    <h1>Welcome to the profile of <%= person %> </h1>
-    <p><strong>Age: </strong><%= data.age %></p>
-    <p><strong>Job: </strong><%= data.job %></p>
-    <h2>Hobbies</h2>
-    <ul>
-      <% data.hobbies.forEach(function(item){ %>
-        <li><%= item %></li>
-      <% }); %>
-    </ul>
+    <% include partials/nav.ejs %> 
+    <h1>Home</h1>
+    <p>Este es un texto sin sentido.</p>
   </body>
 </html>
