Middleware and static files

--- a/NodeJS/App2/views/contact.ejs
+++ b/NodeJS/App2/views/contact.ejs
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Us</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <% include partials/nav.ejs %> 
+    <% include partials/nav.ejs %>
     <h1>Contact Us!</h1>
     <p>Contact us</p>
   </body>
