--- a/NodeJS/App2/views/index.ejs
+++ b/NodeJS/App2/views/index.ejs
@@ -3,29 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/style.css" rel="stylesheet" type="text/css" />
     <style media="screen">
-      body{
-          background: skyblue;
-          font-family: verdana;
-          color: #fff;
-          padding: 30px;
-      }
-      h1{
-          font-size: 48px;
-          text-transformation: uppercase;
-          letter-spacing: 2px;
-          text-align: center;
-      }
-
-      p{
-          font-size:16px;
-          text-align: center;
-      }
     </style>
   </head>
   <body>
-    <% include partials/nav.ejs %> 
+    <% include partials/nav.ejs %>
     <h1>Home</h1>
     <p>Este es un texto sin sentido.</p>
   </body>
