--- a/NodeJS/ToDo/views/todo.ejs
+++ b/NodeJS/ToDo/views/todo.ejs
@@ -6,10 +6,11 @@
     <link href="/assets/styles.css" rel="stylesheet" type="text/css" />
   </head>
 <body>
+  <h1>My Todo List</h1>
   <div id="todo-table">
     <form>
-      <input type = "text" name = "item" placeholder = "Add new item..." required/>
-      <button type = "submit">Add Item</button>
+      <input type="text" name="item" placeholder="Add new item..." required />
+      <button type="submit">Add Item</button>
     </form>
     <ul>
       <li>Item 1</li>
